[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/Actor/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/ribble_walk_0.png" type="Texture" id=2]
[ext_resource path="res://assets/ribble_walk_1.png" type="Texture" id=3]
[ext_resource path="res://assets/ribble_walk_2.png" type="Texture" id=4]
[ext_resource path="res://assets/ribble_walk_3.png" type="Texture" id=5]
[ext_resource path="res://assets/Ribble.png" type="Texture" id=6]
[ext_resource path="res://assets/ribble_jump_0.png" type="Texture" id=7]
[ext_resource path="res://assets/ribble_jump_1.png" type="Texture" id=8]
[ext_resource path="res://assets/arrow.png" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 5 ) ],
"loop": true,
"name": "Running",
"speed": 8.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "Jump_up",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "Jump_down",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32.8442, 60.9795 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 37.863, 63.0141 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 0, 63.3954 )
rotation = 0.000328918
collision_mask = 8
script = ExtResource( 1 )

[node name="player" type="AnimatedSprite" parent="."]
position = Vector2( -2.38419e-007, -63.7727 )
scale = Vector2( 6.68, 6.68 )
frames = SubResource( 1 )
animation = "Jump_down"
playing = true
offset = Vector2( -0.339033, -0.430419 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color( 0.529412, 1, 0.835294, 1 )
position = Vector2( 0, -61.0493 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -244 )
current = true
limit_left = 0
limit_top = 0
limit_smoothed = true
smoothing_enabled = true
smoothing_speed = 7.0
drag_margin_left = 0.0
drag_margin_right = 0.0

[node name="EnemyDetector" type="Area2D" parent="."]
modulate = Color( 0.458824, 0.74902, 0.494118, 1 )
monitorable = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
position = Vector2( 0, -64.8382 )
shape = SubResource( 3 )

[node name="ArrowOrigin" type="Node2D" parent="."]
position = Vector2( -0.020976, -63.7727 )

[node name="arrow" type="Sprite" parent="ArrowOrigin"]
position = Vector2( -0.152011, 0.71349 )
rotation = 1.57192
scale = Vector2( 0.525006, 0.525006 )
texture = ExtResource( 9 )
offset = Vector2( -0.939, -157.811 )
[connection signal="area_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_area_entered"]
[connection signal="body_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_body_entered"]
